	* Chinses (Simplified) translation updated (Funda Wang)
	* Chinese (Traditional) translation updated (Ambrose C. Li)
	* Massive internal core/ui splitting
	* New account dialog.
	* preferences moved to ~/.gaim/prefs.xml
	* account information moved to ~/.gaim/accounts.xml
	* Added Trepia support.
	* New Send IM buddy icon merged from Ximian Desktop 2
	* Fixed "Sort by Status" crash

version 0.64 (05/29/2003):
	* Buddy list sorting in buddy list preferences.
	* Improved debug window with timestamps and pause buttons.
	* New core/ui split notification and request APIs.
	* New mail notification dialog.
	* Several bug fixes in MSN.
	* Conversation window buddy icon bugs were fixed.

version 0.63 (05/16/2003):
	* A rewrite of the plugin API. Plugin authors will need to change their
	  code based off the changes found in other plugins.
	* Perl script support is now provided in the perl plugin.
	* Debugging is core/ui split, and has a new API with support for
	  debug levels and categories.
	* Support for adding chats to your buddy list.
	* MSN protocol plugin was rewritten, has experimental buddy icon
	  support, and MSN Mobile support.
	* Thanks to all the various people who submitted translation updates.
	* Buddy list speed enhancements (Thanks Ethan Blanton).
	* Napster protocol updates (Thanks Auke Kok).

version 0.62 (04/23/2003):
	* Keyboard shortcuts in the buddy list work again (Thanks Joe 
	  Clarke).
	* Support for Jabber XHTML messages
	* Updated a number of translations. Thanks to everyone who submitted
	  a translation update.
	* Ability to re-request authorization from ICQ and Jabber users by right 
	  clicking on them in your buddy list.
	* Improved Zephyr internationalization.
	* Bug causing 'Hide on Send' windows to be lost forever fixed.
	* Iconified windows are now raised properly.
	* Dates printed for old/offline messages.
	* Some assorted crash bugs fixed.

version 0.61 (04/07/2003):
	* Split the buddy pounce core and UI, and rewrote the UI for it.