@@ -232,11 +232,11 @@ faim_export int aim_sendbuddyoffgoing(aim_session_t *sess, aim_conn_t *conn, con
  * Subtypes 0x000b and 0x000c - Change in buddy status
  *
  * Oncoming Buddy notifications contain a subset of the
- * user information structure.  Its close enough to run
- * through aim_extractuserinfo() however.
+ * user information structure.  It's close enough to run
+ * through aim_info_extract() however.
  *
  * Although the offgoing notification contains no information,
- * it is still in a format parsable by extractuserinfo.
+ * it is still in a format parsable by aim_info_extract().
  *
  */
 static int buddychange(aim_session_t *sess, aim_module_t *mod, aim_frame_t *rx, aim_modsnac_t *snac, aim_bstream_t *bs)
@@ -245,10 +245,12 @@ static int buddychange(aim_session_t *sess, aim_module_t *mod, aim_frame_t *rx, 
 	aim_userinfo_t userinfo;
 	aim_rxcallback_t userfunc;
 
-	aim_extractuserinfo(sess, bs, &userinfo);
+	aim_info_extract(sess, bs, &userinfo);
 
 	if ((userfunc = aim_callhandler(sess, rx->conn, snac->family, snac->subtype)))
 		ret = userfunc(sess, rx, &userinfo);
+
+	aim_info_free(&userinfo);
 
 	return ret;
 }
